--- a/css/common.css
+++ b/css/common.css
@@ -184,7 +184,6 @@ h6 {
 .ir_so {overflow: hidden; position:absolute; width:0; height:0; line-height:0; text-indent:-9999px;} /* 대체 텍스트가 아닌 접근성을 위한 숨김 텍스트를 제공할 때 */
 
 
-
 .wrap {
     width: 768px;
     margin: 0 auto;
@@ -273,7 +272,7 @@ input[type="checkbox"] + label > div > i {
 
 .default_type {
 	width: 100%; height: 47px;
-	border: 1px solid #cccccc;
+	border: 1px solid #eeeeee;
 	font-size: 13px;
 	border-radius: 5px;
 	padding: 0.2rem 1rem 0.2rem 1rem;
